--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     <div class="container text-center my-auto">
       <h1 class="mb-1">StreetCode Web Design</h1>
       <h3 class="mb-5">
-        <em>A look of what my Students have done in my class.</em>
+        <em>e.</em>
       </h3>
       <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">Find Out More</a>
     </div>
@@ -74,116 +74,133 @@
   </section>
 
   <!-- Services -->
-    <div class="col-lg-6">
-    <a class="portfolio-item" href="#">
+    <div class="col-lg-6" style= "margin:auto">
+    <a class="portfolio-item" href="http://thebuffgopher.me/">
       <span class="caption">
         <span class="caption-content">
-          <h2>Strawberries</h2>
-          <p class="mb-0">Strawberries are such a tasty snack, especially with a little sugar on top!</p>
+          <h2></h2>
+          <p class="mb-0"></p>
         </span>
       </span>
-      <img class="img-fluid" src="img/portfolio-3.jpg" alt="">
+      <img class="img-fluid" src="img/buff.jpg" alt="">
     </a>
   </div>
-  <!-- Callout -->
-  <section class="callout">
-    <div class="container text-center">
-      <h2 class="mx-auto mb-5">Welcome to
-        <em>your</em>
-        next website!</h2>
-      <a class="btn btn-primary btn-xl" href="https://startbootstrap.com/template-overviews/stylish-portfolio/">Download Now!</a>
-    </div>
-  </section>
 
   <!-- Portfolio -->
   <section class="content-section" id="portfolio">
-    <div class="container">
       <div class="content-section-heading text-center">
         <h3 class="text-secondary mb-0">Portfolio</h3>
         <h2 class="mb-5">Recent Projects</h2>
       </div>
       <div class="row no-gutters">
         <div class="col-lg-6">
-          <a class="portfolio-item" href="#">
+          <a class="portfolio-item" href="http://kidwithaonlineshop.ga/">
             <span class="caption">
               <span class="caption-content">
-                <h2>Stationary</h2>
-                <p class="mb-0">A yellow pencil with envelopes on a clean, blue backdrop!</p>
+                <h2></h2>
+                <p class="mb-0"></p>
               </span>
             </span>
-            <img class="img-fluid" src="img/portfolio-1.jpg" alt="">
+            <img class="img-fluid" src="img/jpp.png" alt="">
           </a>
         </div>
         <div class="col-lg-6">
-          <a class="portfolio-item" href="#">
+          <a class="portfolio-item" href="http://petitepillows.cf/">
             <span class="caption">
               <span class="caption-content">
-                <h2>Ice Cream</h2>
-                <p class="mb-0">A dark blue background with a colored pencil, a clip, and a tiny ice cream cone!</p>
+                <h2></h2>
+                <p class="mb-0"></p>
               </span>
             </span>
-            <img class="img-fluid" src="img/portfolio-2.jpg" alt="">
+            <img class="img-fluid" src="img/cato.png" alt="">
           </a>
         </div>
         <div class="col-lg-6">
-          <a class="portfolio-item" href="#">
+          <a class="portfolio-item" href="http://cheatcodethroughteenlife.tk/">
             <span class="caption">
               <span class="caption-content">
-                <h2>Strawberries</h2>
-                <p class="mb-0">Strawberries are such a tasty snack, especially with a little sugar on top!</p>
+                <h2></h2>
+                <p class="mb-0"></p>
               </span>
             </span>
-            <img class="img-fluid" src="img/portfolio-3.jpg" alt="">
+            <img class="img-fluid" src="img/code.png" alt="">
           </a>
         </div>
         <div class="col-lg-6">
-          <a class="portfolio-item" href="#">
+          <a class="portfolio-item" href="http://informate.ga/">
             <span class="caption">
               <span class="caption-content">
-                <h2>Workspace</h2>
-                <p class="mb-0">A yellow workspace with some scissors, pencils, and other objects.</p>
+                <h2></h2>
+                <p class="mb-0"></p>
               </span>
             </span>
-            <img class="img-fluid" src="img/portfolio-4.jpg" alt="">
+            <img class="img-fluid" src="img/dar.png" alt="">
           </a>
         </div>
-      </div>
-    </div>
+        <div class="col-lg-6">
+          <a class="portfolio-item" href="http://nylasphotography.ga/">
+            <span class="caption">
+              <span class="caption-content">
+                <h2></h2>
+                <p class="mb-0">\</p>
+              </span>
+            </span>
+            <img class="img-fluid" src="img/dice.png" alt="">
+          </a>
+        </div><div class="col-lg-6">
+          <a class="portfolio-item" href="http://gamermedia.ga/">
+            <span class="caption">
+              <span class="caption-content">
+                <h2></h2>
+                <p class="mb-0"></p>
+              </span>
+            </span>
+            <img class="img-fluid" src="img/media.png" alt="">
+          </a>
+        </div>
+        <div class="col-lg-6">
+          <a class="portfolio-item" href="http://mrpicklessanbruno.ga/">
+            <span class="caption">
+              <span class="caption-content">
+                <h2></h2>
+                <p class="mb-0"></p>
+              </span>
+            </span>
+            <img class="img-fluid" src="img/mrrr.png" alt="">
+          </a>
+        </div>
+          <div class="col-lg-6">
+            <a class="portfolio-item" href="http://stayingconnectedinc.tk/">
+              <span class="caption">
+                <span class="caption-content">
+                  <h2></h2>
+                  <p class="mb-0"></p>
+                </span>
+              </span>
+              <img class="img-fluid" src="img/stayy.png" alt="">
+            </a>
+          </div>
   </section>
-
-  <!-- Call to Action -->
-  <section class="content-section bg-primary text-white">
-    <div class="container text-center">
-      <h2 class="mb-4">The buttons below are impossible to resist...</h2>
-      <a href="#" class="btn btn-xl btn-light mr-4">Click Me!</a>
-      <a href="#" class="btn btn-xl btn-dark">Look at Me!</a>
-    </div>
-  </section>
-
-  <!-- Map -->
-
-
   <!-- Footer -->
   <footer class="footer text-center">
     <div class="container">
       <ul class="list-inline mb-5">
         <li class="list-inline-item">
-          <a class="social-link rounded-circle text-white mr-3" href="#">
-            <i class="icon-social-facebook"></i>
+          <a class="social-link rounded-circle text-white mr-3" href="https://www.instagram.com/jewls_oo/">
+            <i class="icon-social-instagram"></i>
           </a>
         </li>
         <li class="list-inline-item">
-          <a class="social-link rounded-circle text-white mr-3" href="#">
-            <i class="icon-social-twitter"></i>
+          <a class="social-link rounded-circle text-white mr-3" href="https://www.instagram.com/streetcodeacademy/">
+            <i class="icon-social-instagram"></i>
           </a>
         </li>
         <li class="list-inline-item">
-          <a class="social-link rounded-circle text-white" href="#">
-            <i class="icon-social-github"></i>
+          <a class="social-link rounded-circle text-white" href="https://www.instagram.com/linuxbo/">
+            <i class="icon-social-instagram"></i>
           </a>
         </li>
       </ul>
-      <p class="text-muted small mb-0">Copyright &copy; Your Website 2019</p>
     </div>
   </footer>
 
