--- a/index.html
+++ b/index.html
@@ -38,16 +38,10 @@
         <a class="js-scroll-trigger" href="#page-top">Home</a>
       </li>
       <li class="sidebar-nav-item">
-        <a class="js-scroll-trigger" href="#about">About</a>
+        <a class="js-scroll-trigger" href="#portfolio">Our Websites</a>
       </li>
       <li class="sidebar-nav-item">
-        <a class="js-scroll-trigger" href="#services">Services</a>
-      </li>
-      <li class="sidebar-nav-item">
-        <a class="js-scroll-trigger" href="#portfolio">Portfolio</a>
-      </li>
-      <li class="sidebar-nav-item">
-        <a class="js-scroll-trigger" href="#contact">Contact</a>
+        <a class="js-scroll-trigger" href="#Contact">Contact</a>
       </li>
     </ul>
   </nav>
@@ -55,11 +49,13 @@
   <!-- Header -->
   <header class="masthead d-flex">
     <div class="container text-center my-auto">
-      <h1 class="mb-1">StreetCode Web Design</h1>
+      <h1 class="mb-1" style="
+      color: white;
+  ">StreetCode Web Design</h1>
       <h3 class="mb-5">
         <em></em>
       </h3>
-      <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">Find Out More</a>
+      <a class="btn btn-primary btn-xl js-scroll-trigger" href="#portfolio">Check out our websites</a>
     </div>
     <div class="overlay"></div>
   </header>
@@ -74,7 +70,9 @@
   </section>
 
   <!-- Services -->
-    <div class="col-lg-6" style= "margin:auto">
+  <section class="content-section" id="Services">
+      <div class="content-section-heading text-center">
+        <h2 class="mb-5">Our Instructions </h2>  <div class="col-lg-6" style= "margin:auto">
     <a class="portfolio-item" href="http://thebuffgopher.me/">
       <span class="caption">
         <span class="caption-content">
@@ -89,8 +87,8 @@
   <!-- Portfolio -->
   <section class="content-section" id="portfolio">
       <div class="content-section-heading text-center">
-        <h3 class="text-secondary mb-0">Portfolio</h3>
-        <h2 class="mb-5">Recent Projects</h2>
+        <h3 class="text-secondary mb-0"></h3>
+        <h2 class="mb-5">Our Websites</h2>
       </div>
       <div class="row no-gutters">
         <div class="col-lg-6">
@@ -182,8 +180,9 @@
           </div>
   </section>
   <!-- Footer -->
-  <footer class="footer text-center">
+  <footer class="footer text-center" id="Contact">
     <div class="container">
+      <h2 class="mb-5">Follow Our Socials</h2>
       <ul class="list-inline mb-5">
         <li class="list-inline-item">
           <a class="social-link rounded-circle text-white mr-3" href="https://www.instagram.com/jewls_oo/">
