--- a/index.html
+++ b/index.html
@@ -32,9 +32,6 @@
   <nav id="sidebar-wrapper">
     <ul class="sidebar-nav">
       <li class="sidebar-brand">
-        <a class="js-scroll-trigger" href="#page-top">Start Bootstrap</a>
-      </li>
-      <li class="sidebar-nav-item">
         <a class="js-scroll-trigger" href="#page-top">Home</a>
       </li>
       <li class="sidebar-nav-item">
@@ -42,6 +39,9 @@
       </li>
       <li class="sidebar-nav-item">
         <a class="js-scroll-trigger" href="#Contact">Contact</a>
+      </li>
+      <li class="sidebar-nav-item">
+        <a class="js-scroll-trigger" href="#"></a>
       </li>
     </ul>
   </nav>
@@ -61,13 +61,6 @@
   </header>
 
   <!-- About -->
-  <section class="content-section bg-light" id="about">
-    <div class="container text-center">
-      <div class="row">
-
-      </div>
-    </div>
-  </section>
 
   <!-- Services -->
   <section class="content-section" id="Services">
@@ -176,6 +169,28 @@
                 </span>
               </span>
               <img class="img-fluid" src="img/stayy.png" alt="">
+            </a>
+          </div>
+          <div class="col-lg-6">
+            <a class="portfolio-item" href="http://beautymeansbusiness.ga/">
+              <span class="caption">
+                <span class="caption-content">
+                  <h2></h2>
+                  <p class="mb-0"></p>
+                </span>
+              </span>
+              <img class="img-fluid" src="img/meet.png" alt="">
+            </a>
+          </div>
+          <div class="col-lg-6">
+            <a class="portfolio-item" href="http://newafricamedicinal.ga/">
+              <span class="caption">
+                <span class="caption-content">
+                  <h2></h2>
+                  <p class="mb-0"></p>
+                </span>
+              </span>
+              <img class="img-fluid" src="img/africa.png" alt="">
             </a>
           </div>
   </section>
