--- a/index.html
+++ b/index.html
@@ -200,17 +200,22 @@
       <h2 class="mb-5">Follow Our Socials</h2>
       <ul class="list-inline mb-5">
         <li class="list-inline-item">
-          <a class="social-link rounded-circle text-white mr-3" href="https://www.instagram.com/jewls_oo/">
+          <a class="social-link rounded-circle text-white mr-3" href="https://www.instagram.com/jewls_oo/" target="_blank">
             <i class="icon-social-instagram"></i>
           </a>
         </li>
         <li class="list-inline-item">
-          <a class="social-link rounded-circle text-white mr-3" href="https://www.instagram.com/streetcodeacademy/">
+          <a class="social-link rounded-circle text-white mr-3" href="https://www.instagram.com/streetcodeacademy/" target="_blank" >
             <i class="icon-social-instagram"></i>
           </a>
         </li>
+          <li class="list-inline-item">
+            <a class="social-link rounded-circle text-white mr-3" href="https://www.streetcode.us/" target="_blank">
+              <i class="icon-globe"></i>
+            </a>
+          </li>
         <li class="list-inline-item">
-          <a class="social-link rounded-circle text-white" href="https://www.instagram.com/linuxbo/">
+          <a class="social-link rounded-circle text-white" href="https://www.instagram.com/linuxbo/" target="_blank">
             <i class="icon-social-instagram"></i>
           </a>
         </li>
