--- a/index.html
+++ b/index.html
@@ -222,7 +222,18 @@
       </ul>
     </div>
   </footer>
-
+  <!-- KONAMI -->
+<script type="text/javascript">
+if ( window.addEventListener ) {
+  var state = 0, konami = [38,38,40,40,37,39,37,39,66,65];
+  window.addEventListener("keydown", function(e) {
+    if ( e.keyCode == konami[state] ) state++;
+    else state = 0;
+    if ( state == 10 )
+       window.location = "img/linus.png";  //you can write your own code here
+    }, true);
+}
+</script>
   <!-- Scroll to Top Button-->
   <a class="scroll-to-top rounded js-scroll-trigger" href="#page-top">
     <i class="fas fa-angle-up"></i>
