--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
-<html lang="en">
+
+<!--Hi-->
+<html lang="en" style="cursor: url('img/poopylinus.png'), auto;">
 
 <head>
 
@@ -8,7 +10,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Streetcode- Start Bootstrap Template</title>
+  <title>StreetCode Web Design</title>
 
   <!-- Bootstrap Core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -17,7 +19,9 @@
   <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
   <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
   <link href="vendor/simple-line-icons/css/simple-line-icons.css" rel="stylesheet">
-
+  <link rel = "icon" href =
+  "img/whosnext.png"
+  type = "image/x-icon"></link>
   <!-- Custom CSS -->
   <link href="css/stylish-portfolio.min.css" rel="stylesheet">
 
@@ -66,7 +70,7 @@
   <section class="content-section" id="Services">
       <div class="content-section-heading text-center">
         <h2 class="mb-5">Our Instructions </h2>  <div class="col-lg-6" style= "margin:auto">
-    <a class="portfolio-item" href="http://thebuffgopher.me/">
+    <a class="portfolio-item" href="http://thebuffgopher.me/"target="_blank">
       <span class="caption">
         <span class="caption-content">
           <h2></h2>
@@ -85,7 +89,7 @@
       </div>
       <div class="row no-gutters">
         <div class="col-lg-6">
-          <a class="portfolio-item" href="http://kidwithaonlineshop.ga/">
+          <a class="portfolio-item" href="http://kidwithaonlineshop.ga/"target="_blank">
             <span class="caption">
               <span class="caption-content">
                 <h2></h2>
@@ -96,7 +100,7 @@
           </a>
         </div>
         <div class="col-lg-6">
-          <a class="portfolio-item" href="http://petitepillows.cf/">
+          <a class="portfolio-item" href="http://petitepillows.cf/"target="_blank">
             <span class="caption">
               <span class="caption-content">
                 <h2></h2>
@@ -107,7 +111,7 @@
           </a>
         </div>
         <div class="col-lg-6">
-          <a class="portfolio-item" href="http://cheatcodethroughteenlife.tk/">
+          <a class="portfolio-item" href="http://cheatcodethroughteenlife.tk/"target="_blank">
             <span class="caption">
               <span class="caption-content">
                 <h2></h2>
@@ -118,7 +122,7 @@
           </a>
         </div>
         <div class="col-lg-6">
-          <a class="portfolio-item" href="http://informate.ga/">
+          <a class="portfolio-item" href="http://informate.ga/"target="_blank">
             <span class="caption">
               <span class="caption-content">
                 <h2></h2>
@@ -129,7 +133,7 @@
           </a>
         </div>
         <div class="col-lg-6">
-          <a class="portfolio-item" href="http://nylasphotography.ga/">
+          <a class="portfolio-item" href="http://nylasphotography.ga/"target="_blank">
             <span class="caption">
               <span class="caption-content">
                 <h2></h2>
@@ -139,7 +143,7 @@
             <img class="img-fluid" src="img/dice.png" alt="">
           </a>
         </div><div class="col-lg-6">
-          <a class="portfolio-item" href="http://gamermedia.ga/">
+          <a class="portfolio-item" href="http://gamermedia.ga/"target="_blank">
             <span class="caption">
               <span class="caption-content">
                 <h2></h2>
@@ -150,7 +154,7 @@
           </a>
         </div>
         <div class="col-lg-6">
-          <a class="portfolio-item" href="http://mrpicklessanbruno.ga/">
+          <a class="portfolio-item" href="http://mrpicklessanbruno.ga/"target="_blank">
             <span class="caption">
               <span class="caption-content">
                 <h2></h2>
@@ -161,7 +165,7 @@
           </a>
         </div>
           <div class="col-lg-6">
-            <a class="portfolio-item" href="http://stayingconnectedinc.tk/">
+            <a class="portfolio-item" href="http://stayingconnectedinc.tk/"target="_blank">
               <span class="caption">
                 <span class="caption-content">
                   <h2></h2>
@@ -172,7 +176,7 @@
             </a>
           </div>
           <div class="col-lg-6">
-            <a class="portfolio-item" href="http://beautymeansbusiness.ga/">
+            <a class="portfolio-item" href="http://beautymeansbusiness.ga/"target="_blank">
               <span class="caption">
                 <span class="caption-content">
                   <h2></h2>
@@ -183,7 +187,7 @@
             </a>
           </div>
           <div class="col-lg-6">
-            <a class="portfolio-item" href="http://newafricamedicinal.ga/">
+            <a class="portfolio-item" href="http://newafricamedicinal.ga/"target="_blank">
               <span class="caption">
                 <span class="caption-content">
                   <h2></h2>
@@ -231,7 +235,7 @@ if ( window.addEventListener ) {
     else state = 0;
     if ( state == linus.length){
       console.log("hi")
-       window.location = "img/linus.png";  //you can write your own code here
+       window.location = "img/poopylinuss.gif";
     }
   }, true);
 }
@@ -243,7 +247,7 @@ if ( window.addEventListener ) {
     if ( e.keyCode == ellis[california] ) california++;
     else california = 0;
     if ( california == ellis.length)
-       window.location = "http://streetcodesa.ga/";  //you can write your own code here
+       window.location = "http://streetcodesa.ga/";
     }, true);
 }
 </script>
