More easter eggs

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 
 <!--Hi-->
-<html lang="en" style="cursor: url('img/poopylinus.png'), auto;">
+<html>
 
 <head>
 
@@ -242,12 +242,12 @@ if ( window.addEventListener ) {
 </script>
 <script type="text/javascript"> console.log("hello")
 if ( window.addEventListener ) {
-  var california = 0, ellis = [69,76,76,73,83,83];
+  var california = 0, ellis = [69,76,76,73,83];
   window.addEventListener("keydown", function(e) {
     if ( e.keyCode == ellis[california] ) california++;
     else california = 0;
     if ( california == ellis.length)
-       window.location = "http://streetcodesa.ga/";
+       window.open("http://streetcodesa.ga/");
     }, true);
 }
 </script>
@@ -265,7 +265,44 @@ if ( window.addEventListener ) {
 
   <!-- Custom scripts for this template -->
   <script src="js/stylish-portfolio.min.js"></script>
+    <style>
+    .invisble{
+      position: absolute;
+      top: 400px;
+      left: 368px;
+      font-size:50px;
+      color:transparent;
+      opacity: 0;
+    }
+    </style>
+      <a class="invisble" href="img/poopychan.gif">H</a>
 
+    <div class="overlay"></div>
+    <style>
+    .ok{
+      position: absolute;
+      top: 400px;
+      left: 1126px;
+      font-size:50px;
+      color:transparent;
+      opacity: 0;
+
+    }
+    </style>
+      <a class="ok" href="https://www.instagram.com/jewls_oo/"target="_blank">H</a>
+
+        <style>
+        .eddywardoftw{
+          position: absolute;
+          top: 356px;
+          left: 156px;
+          font-size: 40px;
+          color:transparent;
+          opacity: 0;
+
+        }
+        </style>
+          <a class="eddywardoftw" href="https://www.instagram.com/eddywardoftw/?hl=en"target="_blank">H</a>
 </body>
 
 </html>
