--- a/index.html
+++ b/index.html
@@ -197,6 +197,28 @@
               <img class="img-fluid" src="img/africa.png" alt="">
             </a>
           </div>
+          <div class="col-lg-6">
+            <a class="portfolio-item" href="http://losreyes.ga/"target="_blank">
+              <span class="caption">
+                <span class="caption-content">
+                  <h2></h2>
+                  <p class="mb-0"></p>
+                </span>
+              </span>
+              <img class="img-fluid" src="img/los.png" alt="">
+            </a>
+          </div>
+          <div class="col-lg-6">
+            <a class="portfolio-item" href="http://pianolessonsanna.ga/"target="_blank">
+              <span class="caption">
+                <span class="caption-content">
+                  <h2></h2>
+                  <p class="mb-0"></p>
+                </span>
+              </span>
+              <img class="img-fluid" src="img/piano.png" alt="">
+            </a>
+          </div>
   </section>
   <!-- Footer -->
   <footer class="footer text-center" id="Contact">
