--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
       </div>
       <div class="row no-gutters">
         <div class="col-lg-6">
-          <a class="portfolio-item" href="http://kidwithaonlineshop.ga/"target="_blank">
+          <a class="portfolio-item" href="http://kidwithanonlineshop.ga/"target="_blank">
             <span class="caption">
               <span class="caption-content">
                 <h2></h2>
